--- a/vityaz/scss/style.scss
+++ b/vityaz/scss/style.scss
@@ -122,18 +122,17 @@
         }
     }
     &__phone {
-        padding: 10px 32px;
+        padding: 11px 32px;
         background: linear-gradient(86.75deg, #F8B711 5.26%, #F9A11E 99.59%);
-        border: 1px solid transparent;
         border-radius: 5px;
         font-weight: 500;
         font-size: 18px;
         color: #5C5C5C;
         transition: 0.2s all;
         &:hover {
-            color: #fff;
-            background: transparent;
-            border: 1px solid #F8B711;
+            color: #5C5C5C;
+            background: linear-gradient(86.75deg, #F9A11E 5.26%, #F8B711 99.59%);
+
         }
     }
     &__burger {
@@ -245,6 +244,101 @@
     }
 }
 
+.section__title {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 79px;
+    color: #282828;
+}
+.btn {
+    padding: 31px 73px;
+    background: linear-gradient(86.75deg, #F8B711 5.26%, #F9A11E 99.59%);
+    border-radius: 10px;
+    border-bottom: 4px solid #E38800;
+    border-radius: 10px;
+    font-size: 24px;
+    line-height: 28px;
+    color: #383838;
+    transition: 0.2s all;
+    &:hover {
+        background: linear-gradient(86.75deg, #F9A11E 5.26%, #F8B711 99.59%);
+        border-bottom: 4px solid transparent;
+    }
+}
+ // Services
+.services {
+    padding: 140px 0 160px;
+    background: url(../img/services_bg.png) no-repeat;
+    background-size: cover;
+    &__title {
+        margin: 0 auto;
+        max-width: 50%;
+        text-align: center;
+        color: #2B2B2B;
+        span {
+            font-weight: 400;
+        }
+    }
+    &__descr {
+        margin-top: 55px;
+        font-weight: 300;
+        font-size: 36px;
+        text-align: center;
+        color: #828282;        
+    }
+    &__box {
+        margin-top: 120px;
+    }
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 55px;
+    }
+    &__item {
+        position: relative;
+        margin: 0 10px 95px;
+        max-width: 415px;
+        max-height: 305px;
+        overflow: hidden;
+        img {
+            max-width: 100%;
+        }
+    }
+    &__subtitle {
+        display: block;
+        position: absolute;
+        bottom: 20px;
+        left: 0;
+        padding-left: 20px;
+        width: 100%;
+        font-weight: 900;
+        font-size: 20px;
+        line-height: 25px;
+        color: #FFFFFF;
+        &:after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            right: 15px;
+            transform: translateY(-50%);
+            display: block;
+            width: 38px;
+            height: 24px;
+            background: url(../img/services_arrow.svg) no-repeat;
+            background-size: 100%;
+            transition: 0.2s all;
+        }
+        &:hover:after {
+            right: 10px;
+        }
+    }
+    .btn {
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
 
 // Modal Start
 .overlay {
