--- a/vityaz/css/style.css
+++ b/vityaz/css/style.css
@@ -896,7 +896,7 @@ template {
   position: absolute;
   bottom: 20px;
   left: 0;
-  padding-left: 20px;
+  padding: 0 50px 0 20px;
   width: 100%;
   font-weight: 900;
   font-size: 20px;
@@ -929,6 +929,91 @@ template {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+}
+
+.whyWe {
+  padding: 140px 0 190px;
+  background: url(../img/whyWe_bg.png) no-repeat;
+  background-size: cover;
+}
+
+.whyWe__title {
+  color: #e4e0e0;
+}
+
+.whyWe__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 90px;
+}
+
+.whyWe__item {
+  position: relative;
+  width: 29%;
+}
+
+.whyWe__item:after {
+  content: '';
+  position: absolute;
+  top: 45px;
+  right: -49%;
+  display: block;
+  width: 290px;
+  height: 1px;
+  background: #FFC652;
+}
+
+.whyWe__item:nth-child(4) {
+  margin: 110px 0 0 auto;
+}
+
+.whyWe__item:last-child {
+  margin: 110px auto 0 130px;
+}
+
+.whyWe__item:nth-child(3):after, .whyWe__item:last-child:after {
+  display: none;
+}
+
+.whyWe__icon {
+  margin: 0 auto;
+  width: 115px;
+}
+
+.whyWe__icon img {
+  max-width: 100%;
+  max-height: 115px;
+}
+
+.whyWe__subtitle {
+  margin-top: 45px;
+  font-family: 'Montserrat';
+  font-weight: 600;
+  font-size: 32px;
+  color: #FFFFFF;
+}
+
+.whyWe__descr {
+  margin-top: 25px;
+  font-family: 'Montserrat';
+  font-size: 23px;
+  line-height: 29px;
+  color: #FFFFFF;
+}
+
+.about {
+  padding: 140px 0 170px;
+  background: url(../img/about_bg.png) no-repeat;
+  background-size: cover;
 }
 
 .overlay {
@@ -1055,6 +1140,26 @@ template {
     margin-bottom: 40px;
     width: 31%;
   }
+  .whyWe__item {
+    width: 30%;
+  }
+  .whyWe__item:after {
+    right: -40%;
+    width: 250px;
+  }
+  .whyWe__item:last-child {
+    margin-left: 80px;
+  }
+  .whyWe__icon {
+    width: 100px;
+  }
+  .whyWe__subtitle {
+    font-size: 30px;
+  }
+  .whyWe__descr {
+    font-size: 21px;
+    line-height: 26px;
+  }
 }
 
 @media (max-width: 1300px) {
@@ -1114,6 +1219,31 @@ template {
     font-size: 17px;
     line-height: 20px;
   }
+  .whyWe {
+    padding-bottom: 130px;
+  }
+  .whyWe__items {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .whyWe__item {
+    margin: 0 15px 60px;
+    width: 35%;
+    text-align: center;
+  }
+  .whyWe__item:after {
+    right: -63%;
+    width: 85%;
+  }
+  .whyWe__item:nth-child(4), .whyWe__item:last-child {
+    margin: 0 15px 60px;
+  }
+  .whyWe__item:nth-child(2):after, .whyWe__item:nth-child(4):after {
+    display: none;
+  }
+  .whyWe__item:nth-child(3):after {
+    display: block;
+  }
 }
 
 @media (max-width: 1140px) {
@@ -1172,6 +1302,13 @@ template {
   }
   .services__subtitle {
     font-size: 19px;
+  }
+  .whyWe__item {
+    width: 40%;
+  }
+  .whyWe__item:after {
+    right: -53%;
+    width: 80%;
   }
 }
 
@@ -1335,6 +1472,27 @@ template {
     padding: 25px 60px;
     font-size: 20px;
   }
+  .whyWe__item {
+    width: 44%;
+    text-align: center;
+  }
+  .whyWe__item:after {
+    display: none;
+  }
+  .whyWe__item:nth-child(3):after {
+    display: none;
+  }
+  .whyWe__icon {
+    width: 80px;
+  }
+  .whyWe__subtitle {
+    margin-top: 35px;
+    font-size: 27px;
+  }
+  .whyWe__descr {
+    margin-top: 15px;
+    font-size: 19px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1399,6 +1557,9 @@ template {
   }
   .services__item {
     width: 65%;
+  }
+  .whyWe__item {
+    width: 100%;
   }
 }
 
@@ -1483,8 +1644,7 @@ template {
     width: 100%;
   }
   .services__subtitle {
-    font-size: 14px;
-    line-height: 15px;
+    font-size: 15px;
   }
   .services__subtitle:after {
     width: 32px;
@@ -1492,6 +1652,25 @@ template {
   .services .btn {
     padding: 14px 40px;
     font-size: 16px;
+  }
+  .whyWe {
+    padding: 50px 0;
+  }
+  .whyWe__item {
+    margin: 0 0 50px;
+  }
+  .whyWe__item:nth-child(4), .whyWe__item:last-child {
+    margin: 0 0 50px;
+  }
+  .whyWe__icon {
+    width: 60px;
+  }
+  .whyWe__subtitle {
+    margin-top: 20px;
+    font-size: 19px;
+  }
+  .whyWe__descr {
+    font-size: 14px;
   }
 }
 
