--- a/vityaz/scss/_media.scss
+++ b/vityaz/scss/_media.scss
@@ -25,6 +25,28 @@
             width: 31%;
         }
     }
+    .whyWe {
+        &__item {
+            width: 30%;
+            &:after {
+                right: -40%;
+                width: 250px;
+            }
+            &:last-child {
+                margin-left: 80px;
+            }
+        }
+        &__icon {
+            width: 100px;
+        }
+        &__subtitle {
+            font-size: 30px;
+        }
+        &__descr {
+            font-size: 21px;
+            line-height: 26px;
+        }
+    }
 }
 
 @media (max-width: 1300px) {
@@ -94,6 +116,34 @@
         &__subtitle {
             font-size: 17px;
             line-height: 20px;
+        }
+    }
+    .whyWe {
+        padding-bottom: 130px;
+        &__items {
+            justify-content: space-around;
+        }
+        &__item {
+            margin: 0 15px 60px;
+            width: 35%;
+            text-align: center;
+            &:after {
+                right: -63%;
+                width: 85%;
+            }
+            &:nth-child(4), &:last-child {
+                margin: 0 15px 60px;
+            }
+            &:nth-child(2), &:nth-child(4) {
+                &:after {
+                    display: none;
+                }
+            }
+            &:nth-child(3) {
+                &:after {
+                    display: block;
+                }
+            }
         }
     }
 }
@@ -168,6 +218,15 @@
         }
         &__subtitle {
             font-size: 19px;
+        }
+    }
+    .whyWe {
+        &__item {
+            width: 40%;
+            &:after {
+                right: -53%;
+                width: 80%;
+            }
         }
     }
 }
@@ -320,6 +379,29 @@
             font-size: 20px;
         }
     }
+    .whyWe {
+        &__item {
+            width: 44%;
+            text-align: center;
+            &:after {
+                display: none;
+            }
+            &:nth-child(3):after {
+                display: none;
+            }
+        }
+        &__icon {
+            width: 80px;
+        }
+        &__subtitle {
+            margin-top: 35px;
+            font-size: 27px;
+        }
+        &__descr {
+            margin-top: 15px;
+            font-size: 19px;
+        }
+    }
 }
 
 @media (max-width: 767px) {
@@ -374,6 +456,11 @@
         }
         &__item {
             width: 65%;
+        }
+    }
+    .whyWe {
+        &__item {
+            width: 100%;
         }
     }
 }
@@ -461,8 +548,7 @@
             width: 100%;
         }
         &__subtitle {
-            font-size: 14px;
-            line-height: 15px;
+            font-size: 15px;
             &:after {
                 width: 32px;
             }
@@ -470,6 +556,25 @@
         .btn {
             padding: 14px 40px;
             font-size: 16px;
+        }
+    }
+    .whyWe {
+        padding: 50px 0;
+        &__item {
+            margin: 0 0 50px;
+            &:nth-child(4), &:last-child {
+                margin: 0 0 50px;
+            }
+        }
+        &__icon {
+            width: 60px;
+        }
+        &__subtitle {
+            margin-top: 20px;
+            font-size: 19px;
+        }
+        &__descr {
+            font-size: 14px;
         }
     }
 }
